--- a/myreels/templates/myreels/forgot_password.html
+++ b/myreels/templates/myreels/forgot_password.html
@@ -9,11 +9,11 @@
 
         {{ form }}
 
-        <input type="submit" value="Login">
+        <input type="submit" value="Send mail">
     </form>
 
-        <p>Don't you have an account? <a href="{% url 'myreels:register' %}"> Sign Up</a></p>
-        <p>Forgot Password? <a href="{% url 'myreels:forgot_password' %}"> Forgot Password</a></p>
+{#        <p>Don't you have an account? <a href="{% url 'myreels:register' %}"> Sign Up</a></p>#}
+{#        <p>Forgot Password? <a href="{% url 'myreels:forgot_password' %}"> Forgot Password</a></p>#}
     </div>
 </div>
 
