--- a/myreels/static/myreels/search.css
+++ b/myreels/static/myreels/search.css
@@ -270,3 +270,19 @@
     color: white;
     text-decoration: none;
 }
+
+.btn-black {
+    background: white;
+    border: 1px solid white;
+    color: black;
+    padding: 8px 12px;
+    border-radius: 5px;
+    margin: 0 5px;
+    cursor: pointer;
+}
+
+.username {
+    color: black;
+    font-weight: 600;
+    font-size: 16px;
+}
